--- a/index.html
+++ b/index.html
@@ -214,16 +214,16 @@
     <footer>
         <hr>
         <div id="socialmedia">
-        <h4 class="social">US ON SOCIAL MEDIA:</h4>
+        <h4 class="social"><b><u>US ON SOCIAL MEDIA:</u></b></h4>
         <a href="https://www.facebook.com/" target="_blank"><img src="facebook.png" class="social"></a>
         <a href="https://www.instagram.com/" target="_blank"><img src="instagram.png" class="social"></a>
         <a href="https://www.twitter.com/" target="_blank"><img src="twitter.png" class="social"></a>
         </div>
         <BR>
         <div id="contact">
-        <h4>CONTACT US:</h4>
+        <h4><b><u>CONTACT US:</u></b></h4>
         <h5><B>PH. NO.:85868754XX</B></h5>
-        <h5><B>ADDRESS:TECHM,IIT KHARAGPUR</B></h5>
+        <h5><B>ADDRESS:TECHM, IIT KHARAGPUR</B></h5>
         </div>
 
         <a href="#body"><img src="arrow.png" class="backtotop"></a>
